# verify-bot

./: Dockerfile  README.md
.github/workflows/: build-image.yml
docs/: install.md
example/: my_bot02.py  ping_bot.py
src/: bot_event.py  config.py  data.py  main.py  pyproject.toml  requirements.txt
