[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Fionn Kuo <fionnyk_kuo@17.media>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
discord = "^2.3.2"
audioop-lts = "^0.2.1"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
